# stock_agent

./: .env.example  .gitattributes  .gitignore  README.md  initial_pitch_applied_track_stock_agent.md  pyproject.toml  requirements.txt
data/benchmark/: README.md  cases.json
data/processed/: README.md  fundamentals.csv  news.csv  portfolio.json  prices.csv
data/sample/: fundamentals.csv  news.csv  portfolio.json  prices.csv
docs/: AI_COLLAB_CONTEXT.md  AI_INTERACTION_LOG.md  FINAL_REPORT_DRAFT.md  FINAL_ROADMAP.md  ITERATION_OPTIMIZATION_PLAN.md  MIDTERM_REPORT_DRAFT.md  PROGRESS.md  PROJECT_PLAN.md
llm_course_project_report_template/: final_presentation.tex  final_report.tex  references.bib
reports/: VERIFICATION.md  benchmark_results.md  dataset_validation.md  final_benchmark_results.md  final_dashboard.html  openrouter_llm_test.md
scripts/: demo_server.py  generate_final_data.py  ingest_real_data.py  run_demo.py  setup_env.ps1
src/stock_agent/: __init__.py  agents.py  backtest.py  baselines.py  data_loader.py  data_sources.py  evaluator.py  llm.py  models.py  pipeline.py
tests/: test_data_sources.py  test_pipeline.py
